style: ajustes visuais na responsividade e título da página
- Tornado os nomes dos Pokémon responsivos com uso de flex e clamp()
- Corrigido o título da aba para refletir corretamente a Pokedex
- Atualizado o favicon para uma pokébola mais representativa

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -1,10 +1,19 @@
-*{
-    margin:0px;
-    padding: 0px;
+* {
     box-sizing: border-box;
-
+    margin: 0;
+    padding: 0;
 }
 
-ul{
-    list-style: none;
+body {
+    font-family: 'Poppins', sans-serif;
+    max-width: 100%;
+    margin: 0 auto;
+    background-image: url("../imagens/MyLiveWallpapers-com-Nature.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: #000000;
+    background-position: center;
+    background-attachment: fixed;
+    min-height: 100vh;
+    transition: all 0.3s ease;
 }
