--- a/src/css/responsibility.css
+++ b/src/css/responsibility.css
@@ -1,6 +1,69 @@
-@media(max-width:500px){
-    .pokemonCard .inf p{
-        
-        width: 50%}
+@media (max-width: 768px) {
+    .pokemonList {
+        grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+        display: grid;
+        gap: 20px;
+    }
+    
+    .pokemonCard {
+        width: auto;
+        padding: 12px;
+    }
+    
+    .gif {
+        width: 70px;
+        height: 70px;
+    }
+    
+    
+    .type {
+        padding: 8px;
+        font-size: 13px;
+    }
+}
 
+/* Mobile pequeno - 2 colunas fixas */
+@media (max-width: 480px) {
+
+    header{
+        background-color: rgba(255, 255, 255, 0.7);
+    }
+
+    .darkMode header{
+        background-color: rgba(59, 59, 79, 0.7);
+    }
+
+    .pokemonList {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 5px;
+    }
+    
+    main .pokemonCard .inf{
+        width: 100%;
+        object-fit: contain;
+        font-size: 2.5vw;
+    }
+
+    .inf{
+        font-size: small;
+    }
+
+    
+    .pokemonCard {
+        width: 80%;
+        padding: 10px;
+        gap: 12px;
+        place-self: center;
+    }
+
+    
+    .type {
+        padding: 6px 8px;
+        font-size: 12px;
+    }
+    
+    p {
+        font-size: 12px;
+        padding: 8px;
+    }
 }
